--- a/ar.html
+++ b/ar.html
@@ -404,7 +404,7 @@
 
                 <div class="flex justify-center mt-10">
                     <!-- Google Forms Button -->
-                    <a href="https://forms.gle/yourgoogleformlink" target="_blank"
+                    <a href="https://forms.gle/WqY9jEQRsvwPqHrx6" target="_blank"
                         class="social-button bg-green-500 hover:bg-green-600 text-white py-3 px-6 rounded-full flex items-center space-x-2">
                         <i class="fab fa-google"></i>
                         <span>Submit via Google Forms</span>
