change ar page title

--- a/ar.html
+++ b/ar.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>ThreeZ - Everything You Need for a Successful Coffee Shop</title>
+        <title>ThreeZ - كل ما تحتاجه لنجاح مقهاك</title>
         <meta name="description"
             content="ThreeZ provides everything you need for a successful coffee shop, from premium coffee beans to top-quality equipment.">
         <meta name="keywords" content="coffee, shop, ThreeZ, sa-ThreeZ, beans, product, Nestle, Nutella, fine, Giffard">
