--- a/ar.html
+++ b/ar.html
@@ -266,7 +266,7 @@
                 <!-- Image on the right -->
                 <div class="lg:col-span-5 flex justify-center order-last">
                     <img alt="chocolate-bar" loading="lazy" width="400" height="500" decoding="async" data-nimg="1"
-                        class="object-scale-down lg:w-[450px] lg:h-[550px] mb-12"
+                        class="object-scale-down lg:w-[450px] lg:h-[550px] mb-12 pt-10"
                         style="color:transparent; scale: 120%;" srcSet="/media/images/whyus.png" />
                 </div>
             </div>
